# FAsT-Match

./: .gitignore  CMakeLists.txt
FAsT-Match/: FAsTMatch.cpp  FAsTMatch.h  main.cpp
